--- a/PiClimate.Monitor.WebAssembly/Pages/Chart.razor.css
+++ b/PiClimate.Monitor.WebAssembly/Pages/Chart.razor.css
@@ -18,7 +18,7 @@
   background-color: rgba(255, 255, 255, 0.7);
   visibility: visible !important;
   content: "";
-  z-index: 10;
+  z-index: var(--z-notice);
 }
 
 .empty::after,
@@ -33,7 +33,7 @@
   font-size: 1.5em;
   visibility: visible !important;
   content: "";
-  z-index: 11;
+  z-index: var(--z-notice);
 }
 
 .empty::after
