Added the settings section for client-side options to Monitor.
The client-side options defined through the server's global settings now
can be acquired from the server using the corresponding "/Api/Options"
endpoint. This allows to control the behavior of the WebAssembly client.
Also added the status page time scale option that controls the displayed
time period of the status page mini-charts.

--- a/PiClimate.Monitor.WebAssembly/Pages/Status.razor
+++ b/PiClimate.Monitor.WebAssembly/Pages/Status.razor
@@ -9,6 +9,7 @@
 @attribute [Route(PathRoute), Authorize]
 @implements IUpdatable
 @inject IHttpClientFactory _httpClientFactory
+@inject ClientOptions _clientOptions
 
 <CascadingValue Value="@this">
   <div class="position-absolute z-control">
@@ -72,14 +73,9 @@
   public const string PathRoute = PathPrefix;
 
   /// <summary>
-  ///   Gets the time period to acquire the status data for.
-  /// </summary>
-  private TimeSpan TimePeriod { get; } = TimeSpan.FromSeconds(TimePeriods.Day);
-
-  /// <summary>
   ///   Gets the status period start timestamp.
   /// </summary>
-  private DateTime PeriodStart => PeriodEnd - TimePeriod;
+  private DateTime PeriodStart => PeriodEnd - TimeSpan.FromSeconds(_clientOptions.StatusPageTimeScale);
 
   /// <summary>
   ///   Gets the status period end timestamp.
