--- a/PiClimate.Monitor.WebAssembly/_Imports.razor
+++ b/PiClimate.Monitor.WebAssembly/_Imports.razor
@@ -24,6 +24,7 @@
 @using PiClimate.Common
 @using PiClimate.Common.Components
 @using PiClimate.Common.Models
+@using PiClimate.Common.Settings
 @using PiClimate.Monitor.WebAssembly
 @using PiClimate.Monitor.WebAssembly.Components
 @using PiClimate.Monitor.WebAssembly.Models
