--- a/PiClimate.Monitor.WebAssembly/Pages/Components/Layout.razor
+++ b/PiClimate.Monitor.WebAssembly/Pages/Components/Layout.razor
@@ -18,9 +18,9 @@
 
     @* Footer for wide viewports. *@
     <hr class="d-none d-lg-block border-light w-100 my-2" />
-    <div class="d-none d-lg-block">
-      <SiteFooter />
-    </div>
+    <footer class="d-none d-lg-block">
+      <AppFooter />
+    </footer>
   </aside>
 
   @* Main content. *@
@@ -29,7 +29,7 @@
   </main>
 
   @* Footer for narrow viewports. *@
-  <div class="d-block d-lg-none bg-dark p-2">
-    <SiteFooter />
-  </div>
+  <footer class="d-block d-lg-none bg-dark p-1">
+    <AppFooter />
+  </footer>
 </div>
