--- a/PiClimate.Monitor.WebAssembly/_Imports.razor
+++ b/PiClimate.Monitor.WebAssembly/_Imports.razor
@@ -23,6 +23,7 @@
 @using Microsoft.JSInterop
 @using PiClimate.Common
 @using PiClimate.Common.Components
+@using PiClimate.Common.Localization
 @using PiClimate.Common.Models
 @using PiClimate.Common.Settings
 @using PiClimate.Monitor.WebAssembly
@@ -31,3 +32,4 @@
 @using PiClimate.Monitor.WebAssembly.Pages
 @using PiClimate.Monitor.WebAssembly.Pages.Components
 @using PiClimate.Monitor.WebAssembly.Services
+@using Strings = PiClimate.Monitor.WebAssembly.Localization.Strings
