--- a/PiClimate.Monitor.WebAssembly/Pages/Components/UpdateButton.razor
+++ b/PiClimate.Monitor.WebAssembly/Pages/Components/UpdateButton.razor
@@ -9,7 +9,7 @@
 @inject NavigationManager _navigationManager
 
 <div class="update-button d-inline-block">
-  <a href="@_navigationManager.Uri" title="Update" @onclick="@UpdateAsync">
+  <a href="@_navigationManager.Uri" title="@Strings.Label_Update" @onclick="@UpdateAsync">
     <div class="update-icon"></div>
   </a>
 </div>
