Fixed index.html page localization for some browsers.

--- a/PiClimate.Monitor.WebAssembly/wwwroot/strings.css
+++ b/PiClimate.Monitor.WebAssembly/wwwroot/strings.css
@@ -17,7 +17,7 @@
 }
 
 /* Russian localizable strings. */
-:lang("ru")
+:lang(ru)
 {
   --strings_label-reload: "Обновить";
   --strings_loading-notice: "Загрузка...";
